# servers

./: .envrc  .eslintrc.js  .eslintrc.json  .gitignore  .mcp-safety-baseline.json  .mcp.json  .npmrc  2025-07-26-firstiteration.md  ADDITIONAL.md  ADDITIONAL_FIXES_2025-11-10.md  AI_AGENT_GUIDE.md  AI_CODING_ASSISTANT_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DC Hub - Data Center Intelligence  FINAL_SUMMARY.md  IMPROVEMENTS.md  INSTALLATION.md  MCP_Server_Generator.ipynb  PROJECT_STATUS.md  PostgreSQL  QUALITY_ASSURANCE_MANIFEST.md  QUALITY_REPORT.md  README.md  README.pt-BR.md  RELEASING.md  SECURITY_AUDIT_2025-11-09.md  SECURITY_EVALUATION.md  SECURITY_HARDENING_FINAL.md  SECURITY_INDEX.md  SELENIUM-INTEGRATION.md  WARP.md  agents.txt  auto-commit-approach.js  barbershop-dashboard.html  claude_desktop_config.json  diff_output.txt  documentation.md  enhancement-analysis.md  (+22 more)
.changeset/: add-filesystem-schema-descriptions.md  add-resource-ref-resourceType-description.md  fix-get-env-key-parameter.md  fix-move-file-output-schema.md  fix-ssr-content-stripping.md
.cursor/rules/: pupeteer.mdc
.github/: dependabot.yml  pull_request_template.md
.github/mcp-observatory/: everything.target.json  sequential-thinking.target.json
.github/workflows/: ci.yml  claude.yml  codeql.yml  docker-publish.yml  everything-mcp-diff.yml  issue-triage.lock.yml  issue-triage.md  python.yml  (+9 more)
agents/: IMPLEMENTATION_SUMMARY.md  README.md  deepthink-agent.ts  package-lock.json  package.json  tsconfig.json
aigroup-mdtoword-mcp/: .gitignore  FINAL_SUBMISSION_PACKAGE.md  MCP_SUBMISSION.md  README.md  SUBMISSION_GUIDE.md  mcp-config-examples.md  package.json  quality-check.js  test-image-embed.md  tsconfig.json
community-servers/: README.md
docs/: aegis-zero-trust-sidecar.md  notion-analysis.md  project-analysis.md  security-middleware.md
dto/: start-server.dto.ts
fastn-ucl/: README.md
ignore/: file-operations.test.ts  server-logging.test.ts
memlog/: README.md  adaptive-fallback-implementation.js  ai_driven_enhancements.md  changelog.md  cot_expansion_summary.md  cot_expansion_task.md  gemini-first-architecture.md  gemini-first-proxy.js  ide-integrated-architecture.md  initial_state_verification_3_30_2025_11_09_41_PM.txt  install_mcp_task.md  installation_summary.md  sequential-thinking-analysis-fix.md  sequential-thinking-codebase-analysis.md  sequential-thinking-context-enhancement.md  sequential-thinking-enhancement-plan.md  sequential_thinking_enhancements.md  sequential_thinking_fixes.md  sequentialthinking-error-fix.md  sequentialthinking-fix.md  summary.md  task_log.md  tasks.md  templates_patterns_enhancement.md  test-adaptive-fallback.js  test-gemini-first-proxy.js  test_sequential_thinking.md  token-optimization-issue.md  visualization_implementation.md
scripts/: ci-state-classifier.mjs  ci-state-classifier.test.mjs  cleanup.sh  release.py  test_release.py
servers/: 1inch-mcp.json  aarna-mcp.json  aave-mcp.json  beefy-mcp.json  binance-mcp.json  blockscout-mcp.json  chainlink-mcp.json  coinbase-mcp.json  coinmarketcap-mcp.json  compound-mcp.json  curve-mcp.json  defillama-mcp.json  eigenlayer-mcp.json  ens-mcp.json  etherscan-api-mcp.json  euler-mcp.json  floweringagents.json  gmx-mcp.json  hyperliquid-mcp.json  jupiter-mcp.json  lido-mcp.json  maker-mcp.json  moyan-security-audit.json  pendle-api-mcp-mcp.json  pyth-hermes-mcp.json  pyth-mcp.json  stargate-mcp.json  synthetix-mcp.json  uniswap-mcp.json
src/: clavis.md  index.ts
src/angel-one/: README.md  __init__.py  pyproject.toml  requirements.txt  server.py
src/aws/: README.md  pyproject.toml
src/aws/src/mcp_server_aws/: server.py  tools.py  utils.py
src/azure_mcp_server/: .template.env  Dockerfile  LICENSE  README.md  pyproject.toml
src/azure_mcp_server/mcp_server_azure/: __init__.py  azure_server.py  azure_tools.py  azure_utils.py
src/data-profiler/: pyproject.toml  server.py
src/devrev/: README.md  pyproject.toml
src/devrev/src/devrev/: server.py
src/exogram/: README.md  pyproject.toml
src/exogram/src/mcp_server_exogram/: __init__.py  server.py
src/google-search/: Dockerfile  Makefile  README.md  pyproject.toml
src/google-search/src/mcp_server_googlesearch/: __init__.py  __main__.py  client.py  server.py
src/google-search/tests/: __init__.py  test_client.py
src/mongodb-python/: .env.example  README.md  pyproject.toml
src/mongodb-python/src/mcp_server_mongodb/: __init__.py  server.py
src/pith/: LICENSE  README.md  pyproject.toml
src/pith/src/mcp_server_pith/: __init__.py  __main__.py  compress.py  server.py
src/pith/tests/: evals.json  run_evals.py  test_evals.py  test_pith_v2.py
src/pixeltable/: LICENSE  README.md  pyproject.toml
src/pixeltable/src/mcp_server_pixeltable/: pixeltable.py  server.py
src/pixeltable/src/mpc_server_pixeltable/: __init__.py
src/qualtrics/: LICENSE  README.md  env.example  main.py  pyproject.toml
src/qualtrics/src/qualtrics_mcp/: __init__.py  config.py  server.py
src/qualtrics/src/qualtrics_mcp/api/: __init__.py
src/rememberizer/: .env.example  README.md  pyproject.toml
src/rememberizer/src/mcp_server_rememberizer/: server.py  utils.py
src/s3/: README.md  pyproject.toml
src/s3/src/mcp_server_s3/: __init__.py  __main__.py  server.py
src/s3/src/s3/: server.py
src/s3/~/Downloads/: 05-03-ai-powered-supply-chain-startup-pando-lands-30m-investment.txt_data.json
src/sqlite/: Dockerfile  README.md  encoding_fix.py  pyproject.toml  query_validator.py
src/sqlite/src/mcp_server_sqlite/: server.py
src/sqlite/src/sqlite/: __init__.py  server.py
src/sqlite/test/mcp_server_sqlite/: test_server.py
src/sqlite/tests/: test_dummy.py
src/tavily/: README.md  pyproject.toml
src/tavily/src/mcp_server_tavily/: __init__.py  server.py
src/zep/: README.md  pyproject.toml
src/zep/src/mcp_server_zep/: server.py
src/zep/src/zep/: server.py
test/: index.test.ts  performance_test.ts  security_test.ts
tests/: invariant_sse.test.ts  notebooks.test.ts  pages.test.ts  test_github_issues.py  test_release.py
uxboost/: README.md  server.json
(+880 files in other folders)
