[project]
name = "alphavantage"
version = "0.1.0"
description = "Alphavantage MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "black>=24.10.0",
 "load-dotenv>=0.1.0",
 "mcp>=1.0.0",
 "ruff>=0.8.1",
]
[[project.authors]]
name = "Cesar Alvernaz"
email = "cesar.alvernaz@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
alphavantage = "alphavantage:main"
