[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "angel-one-mcp"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A Model Context Protocol (MCP) server that provides comprehensive trading and market data functionality for Angel One (Angel Broking) through their SmartAPI."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "fastmcp",
    "python-dotenv",
    "pyotp",
    "smartapi-python",
]

[project.urls]
"Homepage" = "https://github.com/YOUR_USERNAME/angel-one-mcp-server" # Replace with your GitHub URL
"Bug Tracker" = "https://github.com/YOUR_USERNAME/angel-one-mcp-server/issues" # Replace with your GitHub URL

[tool.setuptools.packages.find]
where = ["src"]
