[project]
name = "devrev"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "mcp>=1.0.0",]
[[project.authors]]
name = "Sunil Pandey"
email = "sunil.pandey@devrev.ai"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
devrev = "devrev:main"
