[project]
name = "mcp-server-googlesearch"
version = "0.1.0"
description = "A Model Context Protocol server providing Google Search capabilities for LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yu Ishikawaw" }]
maintainers = [{ name = "Yu Ishikawa" }]
keywords = ["google", "search", "mcp", "llm", "automation"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.8",
    "google-api-python-client>=2.161.0",
    "mcp>=1.2.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "autopep8>=2.3.2",
    "black>=25.1.0",
    "isort>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-googlesearch = "mcp_server_googlesearch:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_googlesearch"]

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]
