[project]
name = "mcp-server-pith"
version = "0.1.0"
description = "A Model Context Protocol server providing token-aware context compression for inter-agent payloads, optimized for Windows environments"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Albert", email = "dotthofmann@gmail.com" }]
keywords = ["compression", "mcp", "llm", "agents", "tokens", "context"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=1.1.3",
]

[project.scripts]
mcp-server-pith = "mcp_server_pith:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3", "pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_pith"]
