[project]
name = "mcp-server-s3"
version = "0.1.0"
description = 'A Model Context Protocol server providing tools to interface with Amazon S3 programmatically via LLMs'
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Amazon Web Services" }]
keywords = ["s3", "mcp", "llm", "automation"]
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.0.0",
    "boto3>=1.35.71"
]

[project.scripts]
mcp-server-s3 = "mcp_server_s3:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]
